--- a/autotrade.csproj
+++ b/autotrade.csproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute> 
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Reference Include="RayinVTS.dll">
-      <HintPath>..\lib\RayinVTS.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-  </ItemGroup>
-
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="RayinVTS.dll">
+			<HintPath>..\lib\RayinVTS.dll</HintPath>
+			<SpecificVersion>False</SpecificVersion>
+		</Reference>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Tommy" Version="3.1.2" />
+	</ItemGroup>
 </Project>
