--- a/autotrade.csproj
+++ b/autotrade.csproj
@@ -13,6 +13,6 @@
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Tommy" Version="3.1.2" />
+	  <PackageReference Include="Tomlyn" Version="0.15.0" />
 	</ItemGroup>
 </Project>
