--- a/data/settings.ini
+++ b/data/settings.ini
@@ -1,49 +1,62 @@
-# Configuration
-
 [Login]
 host = "itstradeuat.pscnet.com.tw"
 port = 11002
 account = "A100000261"
 password = "AA123456"
-time.start = 09:00:00
+time.download = 08:30:00
+time.start = 10:00:00
 time.end = 17:00:00
     
-[Rule.Exclude.File.NotDayTrade]
+[Rule.Exclude.NotDayTrade]
 enabled = true
 
-[Rule.Exclude.File.FullCash]
+[Rule.Exclude.FullCash]
 enabled = true
 
-[Rule.Exclude.File.Disposed]
+[Rule.Exclude.Disposed]
 enabled = true
 
-[Rule.Exclude.File.TradeAmount]
+[Rule.Exclude.TradeAmount]
 enabled = true
-amount.past.total.less = 200
+total.less = 200
 
-[Rule.Exclude.File.TradePrice]
+[Rule.Exclude.TradePrice]
 enabled = true
-price.past.close.lower = 10
-price.past.close.higher = 400
+price.close.lower = 10
+price.close.higher = 400
 
-[Rule.Buy]
-cost = 400000
-ordtype = "market"
-timeinforce = "ROD"
+[Rule.Buy.NowPrice]
+enabled = true
 time.start = 09:00:00
 time.end = 09:30:00
-trigger = 1
+price.close.factor = 1.0666
+price.now.compare = [">", "="]
+stock.amount = "zero"
 
-[Rule.Buy.Target.CurrentPrice]
+order.cost = 400000
+order.flag = "market"
+order.timeinforce = "ROD"
+
+[Rule.Sell.NowPrice1]
 enabled = true
-price.past.close.factor = 1.0666
-price.today.now.higher = true
-price.today.now.equal = true
+time.start = 09:00:00
+time.end = 13:30:00
+price.max.factor = 0.9667
+price.now.compare = ["<", "="]
+stock.amount = "positive"
 
+order.cost = -1
+order.flag = "market"
+order.timeinforce = "ROD"
 
-[Rule.Sell.Target.CurrentPrice]
+[Rule.Sell.NowPrice2]
 enabled = true
-price.today.max.factor = 0.9667
-price.today.now.lower_equal = true
+time.start = 10:00:00
+time.end = 13:30:00
+price.bull.factor = 1
+price.now.compare = ["<"]
+stock.amount = "positive"
 
-
+order.cost = -1
+order.flag = "market"
+order.timeinforce = "ROD"
