--- a/autotrade.csproj
+++ b/autotrade.csproj
@@ -13,6 +13,7 @@
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	  <PackageReference Include="Tomlyn" Version="0.15.0" />
 	</ItemGroup>
 </Project>
