--- a/data/Settings.json
+++ b/data/Settings.json
@@ -14,6 +14,10 @@
   },
   "Rules": {
     "Exclude": {
+      "IDLength": {
+        "enabled": true,
+        "length": 4
+      },
       "NotDayTrade": {
         "enabled": true
       },
