--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,4 +56,5 @@ set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY VS_DOTNET_REFERENCES
 
 set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY VS_PACKAGE_REFERENCES 
     "Newtonsoft.Json_13.0.1"
+    "AngleSharp_0.17.1"
 )
