--- a/data/Settings.json
+++ b/data/Settings.json
@@ -21,7 +21,7 @@
     },
     "Info": {
       "url": "https://mops.twse.com.tw/mops/web/t146sb05",
-      "update": true
+      "update": false
     }
   },
   "Paths": {
